--- a/game/game.html
+++ b/game/game.html
@@ -3,6 +3,15 @@
     background: #202026;
   }
 
+  @keyframes video {
+    0% {
+    filter: hue-rotate(5deg);
+    }
+    100% {
+    filter: hue-rotate(105deg);
+    }
+  }
+
   video {
     position: absolute;
     top: 0;
@@ -48,7 +57,9 @@
 
 <script>
   const ship = document.querySelector('img');
-  const audio = new Audio('music.webm');
+  const video = document.querySelector('video');
+
+  const audio = new Audio('song.webm');
   audio.volume = 0.5;
 
   let x = 0;
@@ -84,5 +95,9 @@
       ship.className = 'right';
       ship.style.left = x;
     }
+
+      console.log('video style:' ,video.style);
+    video.style.filter = `hue-rotate(${(x + y) / 10 % 360}deg)`;
+
   }
 </script>
