--- a/game/game.html
+++ b/game/game.html
@@ -46,7 +46,7 @@
 <body>
   <img src="ship.gif" />
   <video autoplay loop muted>
-    <source src="../video/space-hq.mp4" type="video/mp4" />
+    <source src="../video/space-1050p.mp4" type="video/mp4" />
   </video>
 </body>
 
