Add css position absolute lesson

--- a/index.html
+++ b/index.html
@@ -800,10 +800,10 @@
 
 <template id="lesson3-page2">
     <h2>
-      ЛИТУЧКА
+      CSS: POSITION ABSOLUTE
     </h2>
     <figure>
-      <img src="img/lety4ka.gif" />
+      <img src="img/css-absolute.png" />
     </figure>
     <p>
     </p>
