Add lesson 3 slides

--- a/index.html
+++ b/index.html
@@ -809,6 +809,72 @@
     </p>
 </template>
 
+<template id="lesson3-page3">
+    <h2>
+      Javascript
+    </h2>
+    <figure>
+      <img src="img/javascript.jpeg" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson3-page4">
+    <h2>
+      Learning curves
+    </h2>
+    <figure>
+      <img src="img/learning-curves.jpg" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson3-page5">
+    <h2>
+      Javascript in HTML
+    </h2>
+    <figure>
+      <img src="img/js-in-html.png" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson3-page6">
+    <h2>
+      Functions
+    </h2>
+    <figure>
+      <img src="img/js-functions.png" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson3-page7">
+    <h2>
+      ВЫБОР ЭЛЕМЕНТА
+    </h2>
+    <figure>
+      <img src="img/select-element.png" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson3-page8">
+    <h2>
+      VARIABLES
+    </h2>
+    <figure>
+      <img src="img/variables.png" />
+    </figure>
+    <p>
+    </p>
+</template>
+
 <script>
   const left = document.querySelector('.weed-border-left');
   const right = document.querySelector('.weed-border-right');
