--- a/skills/skills.html
+++ b/skills/skills.html
@@ -1,3 +1,8 @@
+<!-- Bust cache for html: https://stackoverflow.com/a/63492589/1657101 -->
+<meta http-equiv="Cache-Control" content="max-age=0, must-revalidate"/>
+<meta http-equiv="Pragma" content="no-cache"/>
+<meta http-equiv="Expires" content="0" />
+
 <style>
   html, body, svg {
     width: 100%;
