--- a/skills/skills.html
+++ b/skills/skills.html
@@ -11,8 +11,7 @@
   }
 
   body {
-    background: url('img/diablo-background.jpeg');
-    background-size: 100% 100%;
+    background: url('diablo-background.jpg');
     background-repeat: no-repeat;
     background-color: black;
   }
