Add skills tree gif to main page

--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
   <marquee>
     <h1>ХТМЛ ШКОЛА - НАПАЛЕОН</h1>
   </marquee>
+
+  <article>
+    <img src="MainPage/skills-tree.gif" />
+    <a href="skills/skills/html"></a>
+  </article>
 </div>
 
 <div class="weed-border-left-bottom">
