Add heading on the main page

--- a/index.html
+++ b/index.html
@@ -242,10 +242,13 @@
     <h1>ХТМЛ ШКОЛА - НАПАЛЕОН</h1>
   </marquee>
 
-  <article>
-    <img src="MainPage/skills-tree.gif" />
-    <a href="skills/skills/html"></a>
-  </article>
+  <h2>ССЫЛКЕ</h2>
+  <section id="main-page-links">
+    <article>
+      <img src="MainPage/skills-tree.gif" />
+      <a href="skills/skills/html"></a>
+    </article>
+  </section>
 </div>
 
 <div class="weed-border-left-bottom">
