--- a/index.html
+++ b/index.html
@@ -94,14 +94,6 @@
     letter-spacing: 4px;
   }
   
-  .page-content h3 {
-    padding-left: 1em;
-    letter-spacing: 4px;
-    font-family: sans-serif;
-    font-size: 1.5em;
-    margin: 0;
-  }
-
   .page-content p {
     padding: 1em;
   }
@@ -211,7 +203,7 @@
 
 </style>
 
-<link rel="stylesheet" href="index.css" />
+<link rel="stylesheet" href="MainPage/MainPage.css" />
 
 </head>
 
@@ -245,6 +237,23 @@
   <h2>ССЫЛКЕ</h2>
   <section id="main-page-links">
     <article>
+      <h3>ДРЕВО УМЕНИЙ</h3>
+      <a href="skills/skills.html">
+        <img src="MainPage/skills-tree.gif" />
+      </a>
+    </article>
+    <article>
+      <h3>ДРЕВО УМЕНИЙ</h3>
+      <img src="MainPage/skills-tree.gif" />
+      <a href="skills/skills/html"></a>
+    </article>
+    <article>
+      <h3>ДРЕВО УМЕНИЙ</h3>
+      <img src="MainPage/skills-tree.gif" />
+      <a href="skills/skills/html"></a>
+    </article>
+    <article>
+      <h3>ДРЕВО УМЕНИЙ</h3>
       <img src="MainPage/skills-tree.gif" />
       <a href="skills/skills/html"></a>
     </article>
