Add lessons gif :)

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
     <h1>ХТМЛ ШКОЛА - НАПАЛЕОН</h1>
   </marquee>
 
+  <!-- 
   <h2>ССЫЛКЕ</h2>
+  -->
   <section id="main-page-links">
     <article>
       <h3>ДРЕВО УМЕНИЙ</h3>
@@ -243,9 +245,10 @@
       </a>
     </article>
     <article>
-      <h3>ДРЕВО УМЕНИЙ</h3>
-      <img src="MainPage/skills-tree.gif" />
-      <a href="skills/skills/html"></a>
+      <h3>ЗОДАНИЯ</h3>
+      <a href="lessons">
+        <img src="MainPage/lessons.gif" />
+      </a>
     </article>
     <article>
       <h3>ДРЕВО УМЕНИЙ</h3>
