Add rating page with level icons

--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
       </a>
     </article>
     <article>
-      <h3>ДРЕВО УМЕНИЙ</h3>
-      <img src="MainPage/skills-tree.gif" />
-      <a href="skills/skills/html"></a>
+      <h3>ДОСКА ПОМËТА</h3>
+      <a href="rating">
+        <img src="Rating/rating.gif" />
+      </a>
     </article>
     <article>
       <h3>ДРЕВО УМЕНИЙ</h3>
