Rating: Add column for each skill

--- a/Rating/index.html
+++ b/Rating/index.html
@@ -9,4 +9,16 @@
   <div class="col">
     <div class="level-3"></div>
   </div>
+  <div class="col">
+    <div class="level-4"></div>
+  </div>
+  <div class="col">
+    <div class="level-5"></div>
+  </div>
+  <div class="col">
+    <div class="level-6"></div>
+  </div>
+  <div class="col">
+    <div class="level-7"></div>
+  </div>
 </body>
