Add avatars to rating :)

--- a/Rating/index.html
+++ b/Rating/index.html
@@ -21,4 +21,14 @@
   <div class="col">
     <div class="level-7"></div>
   </div>
+
+  <div class="row" id="johnny">
+    <img src="/img/johnny.jpg" class="avatar" />
+  </div>
+  <div class="row" id="dimon">
+    <img src="/img/dimon4ik.jpg" class="avatar" />
+  </div>
+  <div class="row" id="tony">
+    <img src="/img/tony.jpg" class="avatar" />
+  </div>
 </body>
