Rating: add homework for Johnny

--- a/Rating/index.html
+++ b/Rating/index.html
@@ -31,4 +31,9 @@
   <div class="row" id="tony">
     <img src="/img/tony.jpg" class="avatar" />
   </div>
+
+    <img src="nexus.webp" class="homework-icon" />
+    <div class="homework-count" >
+      5
+    </div>
 </body>
