Add experience to rating

--- a/Rating/index.html
+++ b/Rating/index.html
@@ -36,4 +36,8 @@
     <div class="homework-count" >
       5
     </div>
+    <div class="skills-icon"></div>
+    <div class="experience-value">
+      31
+    </div>
 </body>
