--- a/skills/skills.html
+++ b/skills/skills.html
@@ -3,188 +3,7 @@
 <meta http-equiv="Pragma" content="no-cache"/>
 <meta http-equiv="Expires" content="0" />
 
-<style>
-  html, body, svg {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  body {
-    background: url('diablo-background.jpg');
-    background-repeat: no-repeat;
-    background-color: black;
-  }
-
-  svg text {
-    stroke: black;
-    fill: black;
-    letter-spacing: 3px;
-    font-family: monospace;
-    text-align: center;
-    font-size: 18px;
-  }
-
-  svg path {
-    stroke: #fbecab;
-    stroke-width: 4px;
-    fill: transparent;
-  }
-
-  svg rect {
-    fill: pink;
-  }
-
-  svg g.skill {
-    
-  }
-
-  svg #rect {
-    opacity: 0;
-  }
-
-  .level-1 {
-    filter: invert(1) sepia(1) saturate(3) hue-rotate(320deg);
-  }
-
-  .level-2 {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(322deg);
-  }
-
-  .level-3 {
-    opacity: 1;
-    filter: invert(1) sepia(1) saturate(7) hue-rotate(326deg);
-  }
-
-  .badge-rect {
-    stroke-width: 4px;
-    stroke: black;
-  }
-
-  .badge-img {
-    opacity: 0.8;
-  }
-
-  .student-level image {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(200deg);
-  }
-
-  .student-level .badge-text {
-    fill: white;
-    stroke: white;
-    font-size: 2em;
-    stroke: black;
-    stroke-width: 1px;
-    font-weight: bold;
-  }
-
-  .student-level-text {
-    fill: white;
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  
-  .student-level image {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(200deg);
-  }
-
-  .student-level-path {
-    fill: transparent;
-    stroke: #83d3ff;
-    stroke: white;
-  }
-
-  .exp-text {
-    font-size: 0.8rem;
-    fill: white;
-    stroke: white;
-    font-weight: normal;
-    font-family: sans-serif;
-  }
-
-  .category-img, .category image {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
-  }
-
-  .category-img.category-level-0 {
-    filter: none;
-  }
-
-  .category-text {
-    stroke: black;
-    fill: black;
-    font-weight: bold;
-    font-family: monospace;
-    font-size: 2em;
-  }
-
-  svg image.level-0 {
-    filter: none;
-  }
-
-  .johnny, .tony {
-    transition: all 1s ease-out;
-  }
-
-  @keyframes avatar {
-    0% {
-      opacity: 0;
-    }
-
-    100% {
-      opacity: 1;
-    }
-  }
-
-  .avatar {
-    border-radius: 50%;
-    overflow: hidden;
-    opacity: 0.5;
-    transition: all 1s ease-out;
-  }
-
-  .avatar:not(.hide) {
-    animation: avatar 5s infinite alternate linear;
-  }
-
-  .avatar.hide {
-    opacity: 0;
-  }
-
-  circle.level {
-    fill: black;
-  }
-
-  header {
-    position: absolute;
-    top: 0; left: 0; right: 0;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  header a,
-  header a:link,
-  header a:active,
-  header a:visited {
-    text-decoration: none;
-    color: white;
-    font-size: 2em;
-    letter-spacing: 5px;
-    padding: 1rem;
-    font-family: monospace;
-    font-weight: bold;
-    background: url("img/texture-100x100.jpg");
-    opacity: 0.5;
-    filter: invert(1) sepia(1) saturate(0.7) hue-rotate(340deg);
-    border-radius: 5px;
-  }
-
-  header a.selected {
-    filter: sepia(1) saturate(1) hue-rotate(140deg);
-    transition: all 1s ease-out;
-  }
-
-</style>
+<link rel="stylesheet" href="skills.css" />
 
 <body>
   <header>
