--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1,45 +1,6 @@
 <html>
   <head>
-    <style>
-      .lessons-grid {
-        display: flex;
-        justify-content: space-around;
-      }
-      .col {
-        flex: 1;
-        text-align: center;
-      }
-
-      .lesson {
-        font-size: 1.5em;
-        letter-spacing: 4px;
-      }
-
-      .lesson img {
-        width: 80%;
-      }
-
-      .lesson a {
-        display: block;
-      }
-
-      figure {
-        margin-block-start: 0;
-        margin-block-end: 0;
-        margin-inline-start: 0;
-        margin-inline-end: 0;
-      }
-
-      svg {
-        margin: 1em;
-      }
-
-      svg circle, svg line {
-        --color: black;
-        stroke: var(--color);
-        fill: var(--color);
-      }
-    </style>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="app"></div>
