Rename lessons/ -> quests/
Also:
- Make quests horizontal
- remove Arrow component

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     </article>
     <article>
       <h3>ЗОДАНИЯ</h3>
-      <a href="lessons">
+      <a href="quests">
         <img src="MainPage/lessons.gif" />
       </a>
     </article>
