Use Prism to highlight code on each keystroke

--- a/quests/lesson.html
+++ b/quests/lesson.html
@@ -5,8 +5,5 @@
 
 <script src="playground.js" type="module"></script>
 
-<link rel="stylesheet"
-    href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
-
-<script>hljs.highlightAll();</script>
+<script src="lib/prism.js"></script>
+<link href="lib/prism.css" rel="stylesheet"/>
