WIP: repair website for new dir structure

--- a/index.html
+++ b/index.html
@@ -1,83 +1,14 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Weed</title>
-
-<link rel="stylesheet" href="index.css" />
-<link rel="stylesheet" href="MainPage/MainPage.css" />
-
+<title>HTML School</title>
+  <link rel="stylesheet" href="src/index.css" />
 </head>
 
-
-<body text="#00FF66" bgcolor="000000" link="#0000CC" alink="#0000FF" vlink="#0000FF" topmargin="0" leftmargin="0">
-
-<div class="weed-border-left">
-  <img src="MainPage/img/logo_leftt.png" />
-</div>
-
-
-
-<div class="weed-border-top-center">
-</div>
-
-<div class="weed-border-top-left">
-  <img src="MainPage/img/logo_left.png" />
-</div>
-
-<div class="weed-border-top-right">
-</div>
-
-<div class="weed-border-right">
-</div>
-
-<div align="justify" class="page-content">
-  <marquee>
-    <h1>ХТМЛ ШКОЛА - НАПАЛЕОН</h1>
-  </marquee>
-
-  <!-- 
-  <h2>ССЫЛКЕ</h2>
-  -->
-  <section id="main-page-links">
-    <article>
-      <h3>ДРЕВО УМЕНИЙ</h3>
-      <a href="skills/skills.html">
-        <img src="MainPage/skills-tree.gif" />
-      </a>
-    </article>
-    <article>
-      <h3>ЗОДАНИЯ</h3>
-      <a href="quests">
-        <img src="MainPage/lessons.gif" />
-      </a>
-    </article>
-    <!--
-    <article>
-      <h3>ДОСКА ПОМËТА</h3>
-      <a href="rating">
-        <img src="Rating/rating.gif" />
-      </a>
-    </article>
-    <article>
-      <h3>ДРЕВО УМЕНИЙ</h3>
-      <img src="MainPage/skills-tree.gif" />
-      <a href="skills/skills/html"></a>
-    </article>
-    -->
-  </section>
-</div>
-
-<div class="weed-border-left-bottom">
-</div>
-
-<div class="weed-border-bottom-center">
-</div>
-
-<div class="weed-border-right-bottom">
-</div>
-
+<body>
+</body>
 
 <script src="index.js" type="module"></script>
-</body>
+
 </html>
 
