--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <title>HTML School</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-twilight.min.css" rel="stylesheet" />
+  <link href="lib/prism.css" rel="stylesheet" />
   <link rel="stylesheet" href="src/index.css" />
 </head>
 
@@ -11,8 +11,7 @@
 
 <script src="index.js" type="module"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/autoloader/prism-autoloader.min.js"></script>
+<script src="lib/prism.js"></script>
 
 </html>
 
