Fix images in rating.html

--- a/src/rating.html
+++ b/src/rating.html
@@ -55,16 +55,16 @@
 
 <body>
     <div class="participant">
-      <img src="img/napaleon.webp" />
+      <img src="/img/napaleon.webp" />
     </div>
     <div class="participant">
-      <img src="img/johnny.jpg" />
+      <img src="/img/johnny.jpg" />
     </div>
     <div class="participant">
-      <img src="img/tony.jpg" />
+      <img src="/img/tony.jpg" />
     </div>
     <div class="participant">
-      <img src="img/dimon4ik.jpg" />
+      <img src="/img/dimon4ik.jpg" />
     </div>
 </body>
 
