--- a/src/slides.html
+++ b/src/slides.html
@@ -1032,7 +1032,8 @@
   });
 
   const pageHash = `#${lesson}-page`;
-  let currentPage = parseInt(location.hash.replace(/#[^0-9]+/, '')) || 0;
+  let currentPage = parseInt(location.hash.replace(/#lesson[^0-9]+/, '')) || 0;
+  console.log('current page: ', currentPage);
 
   const nextPage = () => {
       currentPage++;
@@ -1051,7 +1052,7 @@
       const pageContent = document.querySelector('.page-content');
       pageContent.innerHTML = '';
       pageContent.append(page.cloneNode(true).content);
-      window.history.pushState('#page' + currentPage, 'page ' + currentPage, `#${pageSelector}`);
+      window.history.pushState('#page' + currentPage, 'page ' + currentPage, `${pageSelector}`);
 
       const expectationsForm = document.querySelector('.expectations-form');
       if (expectationsForm) {
