Add first lesson 10 slide

--- a/src/slides.html
+++ b/src/slides.html
@@ -1016,6 +1016,15 @@
       </div>
 </template>
 
+<template id="lesson10-page0">
+  <h2>
+    Э-КватоР
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
